`Refactor eGFR calculation and UI updates in question4 and results pages`

--- a/js/services/calc/html/question4.html
+++ b/js/services/calc/html/question4.html
@@ -18,7 +18,7 @@
             <option value="µmol/L">µmol/L</option>
         </select>
     </div>
-    <input title="Enter Serum Creatinine" class="q_input q_scc2" type="number" id="answer" name="cystatin-c" placeholder="Enter Serum Cystatin C">
+    <!-- <input title="Enter Serum Creatinine" class="q_input q_scc2" type="number" id="answer" name="cystatin-c" placeholder="Enter Serum Cystatin C"> -->
     <div>
         <button class="button_gl" id="next" data-target="end">Enter</button>
     </div>
