--- a/js/services/calc/html/results.html
+++ b/js/services/calc/html/results.html
@@ -8,7 +8,7 @@
     <!-- ! Enter Content Here ! -->
     <h1><strong>Results</strong></h1>
     <br>
-    <p>Your estimated eGFR is <span id="egfr-value">XX</span> mL/min/1.73m²</p>
+    <p>Your estimated eGFR is <strong><span id="egfr-value">Your Mother</span> mL/min/1.73m²</strong></p>
     <br>
     <!-- eGFR Bar -->
     <div id="egfr-bar">
