`Refactor question tracking and answer saving logic in calc service`

--- a/js/services/calc/html/question4.html
+++ b/js/services/calc/html/question4.html
@@ -13,12 +13,11 @@
     <div>
         <input title="enter Serum Creatinine" class="q_input q_sc1" type="number" id="answer" name="creatinine" placeholder="Enter Serum Creatinine">
         <!-- 2 radion buttons, mg/dL and µmol/L -->
-        <select title="units" class="q_input" id="unit" name="unit">
+        <select title="units" class="q_input sc_unit" id="unit" name="unit">
             <option value="mg/dL">mg/dL</option>
             <option value="µmol/L">µmol/L</option>
         </select>
     </div>
-    <!-- <input title="Enter Serum Creatinine" class="q_input q_scc2" type="number" id="answer" name="cystatin-c" placeholder="Enter Serum Cystatin C"> -->
     <div>
         <button class="button_gl" id="next" data-target="end">Enter</button>
     </div>
