--- a/js/services/calc/html/question5.html
+++ b/js/services/calc/html/question5.html
@@ -11,7 +11,7 @@
     <br>
     <br>
     <div>
-        <select title="units" class="q_input" id="unit" name="unit">
+        <select title="units" class="q_input r_5" id="unit" name="unit">
             <option value="White">White</option>
             <option value="Black">Black</option>
             <option value="Asian">Asian</option>
