--- a/html/services/calc/index.html
+++ b/html/services/calc/index.html
@@ -200,7 +200,7 @@
                         <!-- Brings to guthub repo -->
                         <li><a title="github" class="github" href="#"><i class="fa fa-github"></i></a></li>
                         <!-- Brings to a list of our linkedin profiles -->
-                     </ul>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -211,6 +211,10 @@
     <!-- ? Scripts ? -->
     <script type="module" src="../../../js/services/calc/questionTracking.js" type="text/javascript"></script>
     <script type="module" src="../../../js/services/calc/eGFRCalc.js"></script>
+    <script type="module" src="../../../js/services/calc/restoreAnswers.js"></script>
+    <script type="module" src="../../../js/services/calc/fetchDetails.js"></script>
+    <script type="module" src="../../../js/services/calc/marker.js"></script>
+    <script type="module" src="../../../js/services/calc/saveAnswers.js"></script>
     <script src="../../../js/services/calc/scrollTo.js" type="text/javascript"></script>
     <!-- // -->
 </body>
