`Added viewport meta tag to index.html and changed width to max-width in calc style.css`

--- a/html/services/calc/index.html
+++ b/html/services/calc/index.html
@@ -1,6 +1,7 @@
 <head>
     <title id="title">Calculator</title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link data-vue-tag="ssr" rel="icon" type="image/png" sizes="96x96" href="../../../images/favicon/favicon.ico">
     <link rel="stylesheet" href="../../../styles/global/navbar.css">
     <link rel="stylesheet" href="../../../styles/global/footer.css">
