`Refactor practitioner and patient HTML forms and add login validation`

--- a/js/account/html/extraPractitioner.html
+++ b/js/account/html/extraPractitioner.html
@@ -15,7 +15,7 @@
     <div>
         <div class="ac_input">
             <label for="id">Code:</label>
-            <input type="number" id="id" name="id" required placeholder="console 👀">
+            <input type="number" id="id-practitioner" name="id"  placeholder="console 👀" required>
         </div>
     </div>
     <br>
