--- a/js/account/html/patient.html
+++ b/js/account/html/patient.html
@@ -9,8 +9,8 @@
     <br>
     <div>
         <div class="ac_input">
-            <label for="email-address">Username:</label>
-            <input type="text" id="email-address" name="email-address" required>
+            <label for="nhs-number">NHS Number:</label>
+            <input type="text" id="nhs-number" name="nhs-number" required>
         </div>
         <br>
         <div class="ac_input">
