Updated the calculator to the new requirements

--- a/js/services/calc/html/question1.html
+++ b/js/services/calc/html/question1.html
@@ -12,7 +12,7 @@
     <br>
     <!-- 2 buttons: "Yes" and "No, go to pediatric calculator" -->
     <div>
-        <button class="button_gl q3_answer" id="next" data-target="question2" data-answer="Yes">Yes</button>
-        <button class="button_gl" id="under-age">No, go to pediatric calculator</button>
+        <button class="button_gl q3_answer" id="next" data-target="question2" data-answer="yes">Yes</button>
+        <button class="button_gl q3_answer" id="next" data-target="question7" data-answer="no">No, go to pediatric calculator</button>
     </div>
 </div>
