adjusted calc logic

--- a/js/services/calc/html/question5.html
+++ b/js/services/calc/html/question5.html
@@ -2,7 +2,7 @@
 <br>
 <br>
 <div class="container">
-    <a class="getback" id="prev"><strong><</strong> Go Back</a>
+    <a class="getback" id="prev" data-target="question4"><strong><</strong> Go Back</a>
     <br>
     <br>
     <h1><strong>What is your race/ethnicity?</strong></h1>
