--- a/js/services/calc/html/question8.html
+++ b/js/services/calc/html/question8.html
@@ -2,15 +2,15 @@
 <br>
 <br>
 <div class="container">
-    <a class="getback" id="prev"><strong><</strong> Go Back</a>
+    <a class="getback" id="prev" data-target="question1"><strong><</strong> Go Back</a>
     <br>
     <br>
-    <h1><strong>Are you 18 or over?</strong></h1>
+    <h1><strong>How old are you?</strong></h1>
     <br>
-    <p>What is your age (in years)</p>
+    <p>What is your age (in years)? You must be below the age of 18 to proceed</p>
     <br>
     <input class="q_input q_age" type="number" id="answer" name="age" placeholder="Enter your age" required>
     <div>
-        <button class="button_gl" id="next" type="submit" data-target="question3">Enter</button>
+        <button class="button_gl" id="next-button" type="submit" data-target="question7">Enter</button>
     </div>
 </div>
