--- a/js/services/calc/html/question1.html
+++ b/js/services/calc/html/question1.html
@@ -2,7 +2,7 @@
 <br>
 <br>
 <div class="container">
-    <a class="getback" id="prev"><strong><</strong> Go Back</a>
+    <a class="getback" id="prev-1"><strong><</strong> Go Back</a>
     <br>
     <br>
     <h1><strong>Are you 18 or over?</strong></h1>
@@ -12,7 +12,7 @@
     <br>
     <!-- 2 buttons: "Yes" and "No, go to pediatric calculator" -->
     <div>
-        <button class="button_gl q3_answer" id="next" data-target="question2" data-answer="yes">Yes</button>
-        <button class="button_gl q3_answer" id="next" data-target="question7" data-answer="no">No, go to pediatric calculator</button>
+        <button class="button_gl q3_answer check_calc" id="next-button" data-target="question2" data-answer="yes">Yes</button>
+        <button class="button_gl q3_answer check_calc" id="next-button" data-target="question8" data-answer="no">No, go to pediatric calculator</button>
     </div>
 </div>
