--- a/js/services/calc/html/question3.html
+++ b/js/services/calc/html/question3.html
@@ -2,7 +2,7 @@
 <br>
 <br>
 <div class="container">
-    <a class="getback" id="prev"><strong><</strong> Go Back</a>
+    <a class="getback" id="prev" data-target="question2"><strong><</strong> Go Back</a>
     <br>
     <br>
     <h1><strong>What is your gender?</strong></h1>
@@ -11,7 +11,7 @@
     <br>
     <br>
     <div>
-        <button class="button_gl q3_answer male" id="next" data-target="question4" data-answer="Male">Male</button>
-        <button class="button_gl q3_answer female" id="next" data-target="question4" data-answer="Female">Female</button>
+        <button class="button_gl q3_answer male" id="next-button" data-target="question4" data-answer="Male">Male</button>
+        <button class="button_gl q3_answer female" id="next-button" data-target="question4" data-answer="Female">Female</button>
     </div>
 </div>
