--- a/js/services/calc/html/question4.html
+++ b/js/services/calc/html/question4.html
@@ -2,7 +2,7 @@
 <br>
 <br>
 <div class="container">
-    <a class="getback" id="prev"><strong><</strong> Go Back</a>
+    <a class="getback" id="prev" data-target="question3"><strong><</strong> Go Back</a>
     <br>
     <br>
     <h1><strong>What is your serum creatinine level?</strong></h1>
@@ -19,6 +19,6 @@
         </select>
     </div>
     <div>
-        <button class="button_gl" id="next" data-target="end">Enter</button>
+        <button class="button_gl" id="next-input" data-target="end">Enter</button>
     </div>
 </div>
