Refactor calculator HTML structure and update navigation logic

--- a/js/services/calc/html/adult/question4.html
+++ b/js/services/calc/html/adult/question4.html
@@ -19,6 +19,6 @@
         </select>
     </div>
     <div>
-        <button class="button_gl" id="next-input" data-target="end">Enter</button>
+        <button class="button_gl" id="next" data-target="end">Enter</button>
     </div>
 </div>
