--- a/js/services/calc/html/child/question2.html
+++ b/js/services/calc/html/child/question2.html
@@ -7,10 +7,10 @@
     <br>
     <h1><strong>How old are you?</strong></h1>
     <br>
-    <p>What is your age (in years)? You must be over 18 to proceed</p>
+    <p>What is your age (in years)? You must be below the age of 18 to proceed</p>
     <br>
     <input class="q_input q_age" type="number" id="answer" name="age" placeholder="Enter your age" required>
     <div>
-        <button class="button_gl" id="next-input" type="submit" data-target="question3">Enter</button>
+        <button class="button_gl" id="next" type="submit" data-target="question7">Enter</button>
     </div>
 </div>
