--- a/js/services/calc/html/question1.html
+++ b/js/services/calc/html/question1.html
@@ -12,7 +12,7 @@
     <br>
     <!-- 2 buttons: "Yes" and "No, go to pediatric calculator" -->
     <div>
-        <button class="button_gl q3_answer check_calc" id="next-button" data-target="question2" data-answer="yes">Yes</button>
-        <button class="button_gl q3_answer check_calc" id="next-button" data-target="question8" data-answer="no">No, go to pediatric calculator</button>
+        <button class="button_gl q3_answer check_calc" id="next" data-target="adult" data-answer="yes">Yes</button>
+        <button class="button_gl q3_answer check_calc" id="next" data-target="child" data-answer="no">No, go to pediatric calculator</button>
     </div>
 </div>
