Refactor question navigation and enhance height input handling in calculator

--- a/js/services/calc/html/child/question5.html
+++ b/js/services/calc/html/child/question5.html
@@ -20,6 +20,6 @@
         </select>
     </div>
     <div>
-        <button class="button_gl pre-results" id="pre-results" data-target="end">Enter</button>
+        <button class="button_gl pre-results" id="next" data-target="end">Enter</button>
     </div>
 </div>
