--- a/html/services/calc/index.html
+++ b/html/services/calc/index.html
@@ -11,6 +11,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <script type="module" src="../../../js/services/calc/questionTracking.js" type="application/javascript"></script>
 </head>
 <body style="background-color: #EFE3C2;">
     <!-- // -->
@@ -210,7 +211,6 @@
     
     <!-- // -->
     <!-- ? Scripts ? -->
-    <script type="module" src="../../../js/services/calc/questionTracking.js" type="text/javascript"></script>
     <script type="module" src="../../../js/services/calc/eGFRCalc.js"></script>
     <script type="module" src="../../../js/services/calc/restoreAnswers.js"></script>
     <script type="module" src="../../../js/services/calc/fetchDetails.js"></script>
