`Refactor height input and calculation logic in eGFRCalc.js, question6.html, questionTracking.js, and saveAnswers.js`

--- a/js/services/calc/html/child/question6.html
+++ b/js/services/calc/html/child/question6.html
@@ -7,21 +7,13 @@
     <br>
     <h1><strong>How tall are you?</strong></h1>
     <br>
-    <p>Give your height in either cm or feet and inches. For example, 5'8" or 172cm.</p>
+    <p>Give your height in either cm. For example, 172cm.</p>
     <br>
     <br>
     <div>
         <div class="height_input" id="cm">
             <input class="q_input q_height_s" type="number" id="height-cm" placeholder="Enter your height in cm">
         </div>
-        <div class="height_input" id="feet" style="display: none;">
-            <input class="q_input q_height_f" type="number" id="height-feet" placeholder="Feet">
-            <input class="q_input q_height_i" type="number" id="height-inches" placeholder="Inches">
-        </div>
-        <select class="height_unit q_input r_5">
-            <option type="radio" id="cm-radio" name="unit" value="cm" for="cm-radio" checked>cm</option>
-            <option type="radio" id="feet-radio" name="unit" value="feet" for="feet-radio">feet & inches</option>
-        </select>
     </div>
     <div>
         <button class="button_gl pre-results" id="pre-results" data-target="question3">Enter</button>
