--- a/js/services/calc/html/child/question3.html
+++ b/js/services/calc/html/child/question3.html
@@ -11,7 +11,7 @@
     <br>
     <br>
     <div>
-        <button class="button_gl q3_answer male" id="next" data-target="question4" data-answer="Male">Male</button>
-        <button class="button_gl q3_answer female" id="next" data-target="question4" data-answer="Female">Female</button>
+        <button class="button_gl q3_answer gender male" id="next" data-target="question4" data-answer="Male">Male</button>
+        <button class="button_gl q3_answer gender female" id="next" data-target="question4" data-answer="Female">Female</button>
     </div>
 </div>
