Refactor question navigation, enhance answer saving logic, and update HTML structure for improved user experience

--- a/js/services/calc/html/results.html
+++ b/js/services/calc/html/results.html
@@ -2,7 +2,7 @@
 <br>
 <br>
 <div class="container">
-    <a class="getback" id="prev"><strong><</strong> Go Back</a>
+    <a class="getback" id="prev-3"><strong><</strong> Go Back</a>
     <br>
     <br>
     <!-- ! Enter Content Here ! -->
