--- a/js/services/calc/html/child/question7.html
+++ b/js/services/calc/html/child/question7.html
@@ -2,7 +2,7 @@
 <br>
 <br>
 <div class="container">
-    <a class="getback" id="prev" data-target="question5"><strong><</strong> Go Back</a>
+    <a class="getback" id="prev-2" data-target="question5"><strong><</strong> Go Back</a>
     <br>
     <br>
     <h1><strong>Results</strong></h1>
