Refactor results display, enhance question navigation, and implement answer reset functionality

--- a/js/services/calc/html/results.html
+++ b/js/services/calc/html/results.html
@@ -8,7 +8,8 @@
     <!-- ! Enter Content Here ! -->
     <h1><strong>Results</strong></h1>
     <br>
-    <p>Your estimated eGFR is <strong><span id="egfr-value">Your Mother</span> mL/min/1.73m²</strong></p>
+    <p>Your estimated eGFR is </p>
+    <h2><strong><span id="egfr-value">Your Mother</span> mL/min/1.73m²</strong></h2>
     <br>
     <!-- eGFR Bar -->
     <div id="egfr-bar">
