Show user email in dashboard.

--- a/html/dashboard/home-dashboard.html
+++ b/html/dashboard/home-dashboard.html
@@ -23,7 +23,7 @@
         </div>
         <!-- // -->
         <!-- ! Side Bar ! -->
-        <div class="w3-sidebar w3-bar-block sb_012" id="sidebar" style="width:25%">
+        <div class="w3-sidebar w3-bar-block sb_012" id="sidebar" style="width:25%; display:none">
             <button class="w3-button w3-block w3-left-align" onclick="closeNav()">Close</button>
             <a href="#" class="w3-bar-item w3-button">Link 1</a>
             <a href="#" class="w3-bar-item w3-button">Link 2</a>
@@ -35,7 +35,7 @@
             <div class="top-content">
                 <h1><strong>Dashboard Overview</strong></h1>
                 <br>
-                <h5>Welcome back, <span id="logged-in-numb-nuts">???</span></h5>
+                <h5>Welcome back, <span id="userName">???</span></h5>
             </div>
         </div>
         <!-- // -->
@@ -101,6 +101,7 @@
     <!-- // -->
 
     <!-- TODO: Implement Guard Script to check if user is logged in before displaying the page -->
-    <!-- <script src="../../js/dashboard/guardScript.js" type="text/javascript"></script> -->
+    <script src="../../js/dashboard/guardScript.js" type="text/javascript"></script>
     <script src="../../js/dashboard/navScript.js" type="text/javascript"></script>
+    <script src="../../js/services/user/userInfo.js" type="text/javascript"></script>
 </body>
