--- a/js/account/html/extraPractitioner.html
+++ b/js/account/html/extraPractitioner.html
@@ -21,6 +21,6 @@
     <br>
     <br>
     <div class="ac_buttons">
-        <button title="login" class="button_gl" id="practitioner-login">Login</button>
+        <button title="login" class="button_gl" id="practitioner-code">Login</button>
     </div>
 </div>
