--- a/js/account/html/practitioner.html
+++ b/js/account/html/practitioner.html
@@ -9,8 +9,8 @@
     <br>
     <div>
         <div class="ac_input">
-            <label for="id">ID Number:</label>
-            <input type="number" id="id" name="id" required>
+            <label for="id">HPC ID:</label>
+            <input type="text" id="id" name="id" required>
         </div>
         <br>
         <div class="ac_input">
@@ -21,6 +21,6 @@
     <br>
     <br>
     <div class="ac_buttons">
-        <button title="login" class="button_gl" id="practitioner-code">Login</button>
+        <button title="login" class="button_gl" id="clinician-login">Login</button>
     </div>
 </div>
