--- a/html/account/index.html
+++ b/html/account/index.html
@@ -153,5 +153,6 @@
     <!-- // -->
     <!-- ? Scripts ? -->
     <script src="../../js/account/toLoginPage.js"></script>
+    <script src="../../js/account/login.js" defer></script>
     <!-- // -->
 </body>
