`Added age validation and forgot password link to patient login, updated question2.html for adult and child, and modified questionTracking.js to include additional age validation checks.`

--- a/js/account/html/patient.html
+++ b/js/account/html/patient.html
@@ -18,14 +18,24 @@
             <input type="password" id="password" name="password" required>
         </div>
         <br>
-        <div class="re_check">
-            <input type="checkbox" id="remember-me" name="remember-me">
-            <label for="remember-me">Remember me</label>
+        <div>
+            <div class="re_check">
+                <input type="checkbox" id="remember-me" name="remember-me">
+                <label for="remember-me">Remember me</label>
+            </div>
+            <!-- Add Forgot Password link -->
+             <br>
+            <a href="#" id="forgot-password">Forgot Password?</a>
         </div>
     </div>
     <br>
     <br>
     <div class="ac_buttons">
-        <button title="login" class="button_gl" id="patient-login">Login</button>
+        <div>
+            <button title="login" class="button_gl" id="patient-login">Login</button>
+        </div>
+        <div>
+            <button title="register" class="button_gl" id="patient-register">Register</button>
+        </div>
     </div>
 </div>
