--- a/js/services/calc/html/adult/question2.html
+++ b/js/services/calc/html/adult/question2.html
@@ -9,7 +9,7 @@
     <br>
     <p>What is your age (in years)? You must be over 18 to proceed</p>
     <br>
-    <input class="q_input q_age" type="number" id="answer" name="age" placeholder="Enter your age" required>
+    <input class="q_input q_age" type="number" id="answer" name="age" placeholder="Enter your age" required min="18">
     <div>
         <button class="button_gl" id="next" type="submit" data-target="question3">Enter</button>
     </div>
