--- a/js/services/calc/html/child/question2.html
+++ b/js/services/calc/html/child/question2.html
@@ -9,7 +9,7 @@
     <br>
     <p>What is your age (in years)? You must be below the age of 18 to proceed</p>
     <br>
-    <input title="Enter Age" class="q_input q_age" type="number" id="answer" name="age" placeholder="Enter your age">
+    <input title="Enter Age" class="q_input q_age" type="number" id="answer" name="age" placeholder="Enter your age" required max="17">
     <div>
         <button class="button_gl" id="next" type="submit" data-target="question7">Enter</button>
     </div>
