--- a/js/services/calc/html/question1.html
+++ b/js/services/calc/html/question1.html
@@ -11,7 +11,7 @@
     <br>
     <br>
     <!-- 2 buttons: "Yes" and "No, go to pediatric calculator" -->
-    <div>
+    <div class="ac_buttons">
         <button class="button_gl q3_answer check_calc" id="next" data-target="adult" data-answer="yes">Yes</button>
         <button class="button_gl q3_answer check_calc" id="next" data-target="child" data-answer="no">No, go to pediatric calculator</button>
     </div>
