Enhance eGFR calculation by adding pediatric support, updating result display logic, and improving marker functionality for age-based determination.

--- a/js/services/calc/html/results.html
+++ b/js/services/calc/html/results.html
@@ -41,7 +41,7 @@
     
     <h4><strong>What your result means</strong></h4>
     <br>
-    <ul id="result-meaning">
+    <ul id="result-meaning" style="display: block;">
         <li
         ><strong>90+ mL/min/1.73m²</strong> (Normal or High Function)
             <p>What it means: Your kidneys are functioning normally. No signs of chronic kidney disease (CKD).</p>
@@ -66,6 +66,30 @@
         <li><strong><15 mL/min/1.73m²</strong> (Kidney Failure)
             <p>What it means: End-stage kidney disease (ESKD). Your kidneys are no longer able to function properly.</p>
             <p>Next steps: Immediate medical attention is required. Treatment options may include dialysis or kidney transplantation.</p>
+        </li>
+    </ul>
+
+    <!-- Pediatric Ranges -->
+    <ul id="result-meaning-pediatric" style="display: none;">
+        <li><strong>>90 mL/min/1.73m²</strong> — Normal kidney function for children 2+ years
+            <p>What it means: Your child's kidneys are functioning at normal levels.</p>
+            <p>Next steps: Continue regular check-ups with your pediatrician.</p>
+        </li>
+        <li><strong>80–89 mL/min/1.73m²</strong> — Slightly reduced; may still be normal in some pediatric ranges
+            <p>What it means: Slightly reduced kidney function, but may be within normal range for some children.</p>
+            <p>Next steps: Discuss with your pediatrician during next visit.</p>
+        </li>
+        <li><strong>60–79 mL/min/1.73m²</strong> — Mild reduction; consider monitoring
+            <p>What it means: Mild reduction in kidney function that requires attention.</p>
+            <p>Next steps: Schedule a follow-up with your pediatrician for further evaluation.</p>
+        </li>
+        <li><strong>30–59 mL/min/1.73m²</strong> — Moderate reduction; may require medical evaluation
+            <p>What it means: Moderate decrease in kidney function that needs medical attention.</p>
+            <p>Next steps: Consult with a pediatric nephrologist for detailed evaluation.</p>
+        </li>
+        <li><strong><30 mL/min/1.73m²</strong> — Possible severe kidney dysfunction in pediatric patients
+            <p>What it means: Significant decrease in kidney function requiring immediate attention.</p>
+            <p>Next steps: Seek immediate medical attention from a pediatric kidney specialist.</p>
         </li>
     </ul>
     <!-- // -->
