Update footer content across multiple pages to replace placeholder text with informative descriptions about CKD Helper and its services, and adjust copyright year and attribution.

--- a/html/account/index.html
+++ b/html/account/index.html
@@ -100,12 +100,7 @@
                 <div class="col-sm-12 col-md-6">
                     <h6>About</h6>
                     <p class="text-justify">
-                        Your Mother? Gay 🫵😂
-                        Your Dad? Gay 👁👄👁
-                        Your Brother? Gay 🤣
-                        Your Sister? Gay 💀🔫
-                        Your Dog? Gay 🐕
-                        Your Cat? Gay 🐈
+                        CKD Helper provides secure account management for both healthcare practitioners and patients. Our platform enables tracking of kidney health metrics over time, with features for storing historical eGFR calculations, viewing trends, and managing patient information. We prioritize data security and user privacy while making kidney health monitoring more accessible and organized.
                     </p>
                 </div>
     
@@ -133,8 +128,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-sm-6 col-xs-12">
-                    <p class="copyright-text">Copyright &copy; 2025 All Rights Reserved by
-                        <a href="#">Your Mother</a>.
+                    <p class="copyright-text">Copyright &copy; 2024 All Rights Reserved by
+                        <a href="#">CKD Helper</a>.
                     </p>
                 </div>
     
