--- a/html/dashboard/home-dashboard.html
+++ b/html/dashboard/home-dashboard.html
@@ -50,12 +50,7 @@
                 <div class="col-sm-12 col-md-6">
                     <h6>About</h6>
                     <p class="text-justify">
-                        Your Mother? Gay 🫵😂
-                        Your Dad? Gay 👁👄👁
-                        Your Brother? Gay 🤣
-                        Your Sister? Gay 💀🔫
-                        Your Dog? Gay 🐕
-                        Your Cat? Gay 🐈
+                        The CKD Helper Dashboard provides a centralized view of your kidney health data and calculations. Healthcare practitioners can monitor multiple patients, while individuals can track their personal kidney health metrics over time. Our intuitive interface makes it easy to view historical data, identify trends, and make informed healthcare decisions.
                     </p>
                 </div>
     
@@ -83,8 +78,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-sm-6 col-xs-12">
-                    <p class="copyright-text">Copyright &copy; 2025 All Rights Reserved by
-                        <a href="#">Your Mother</a>.
+                    <p class="copyright-text">Copyright &copy; 2024 All Rights Reserved by
+                        <a href="#">CKD Helper</a>.
                     </p>
                 </div>
     
