--- a/html/home/index.html
+++ b/html/home/index.html
@@ -171,12 +171,7 @@
                 <div class="col-sm-12 col-md-6">
                     <h6>About</h6>
                     <p class="text-justify">
-                        Your Mother? Gay 🫵😂
-                        Your Dad? Gay 👁👄👁
-                        Your Brother? Gay 🤣
-                        Your Sister? Gay 💀🔫
-                        Your Dog? Gay 🐕
-                        Your Cat? Gay 🐈
+                        CKD Helper is a comprehensive platform dedicated to kidney health awareness and assessment. We provide educational resources about kidney disease, risk factors, and testing options, alongside our specialized eGFR calculator. Our mission is to make kidney health information and assessment tools readily accessible to both healthcare providers and patients, supporting better understanding and management of kidney health.
                     </p>
                 </div>
     
@@ -204,8 +199,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-sm-6 col-xs-12">
-                    <p class="copyright-text">Copyright &copy; 2025 All Rights Reserved by
-                        <a href="#">Your Mother</a>.
+                    <p class="copyright-text">Copyright &copy; 2024 All Rights Reserved by
+                        <a href="#">CKD Helper</a>.
                     </p>
                 </div>
     
