--- a/html/services/calc/index.html
+++ b/html/services/calc/index.html
@@ -159,12 +159,7 @@
                 <div class="col-sm-12 col-md-6">
                     <h6>About</h6>
                     <p class="text-justify">
-                        Your Mother? Gay 🫵😂
-                        Your Dad? Gay 👁👄👁
-                        Your Brother? Gay 🤣
-                        Your Sister? Gay 💀🔫
-                        Your Dog? Gay 🐕
-                        Your Cat? Gay 🐈
+                        The eGFR Calculator is a specialized medical tool designed to help assess kidney function through estimated Glomerular Filtration Rate (eGFR) calculations. Our service provides accurate calculations for both adult and pediatric patients, using established medical formulas and guidelines. This tool is part of our commitment to making kidney health assessment more accessible and understandable for healthcare providers and patients alike.
                     </p>
                 </div>
     
@@ -192,8 +187,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-sm-6 col-xs-12">
-                    <p class="copyright-text">Copyright &copy; 2025 All Rights Reserved by
-                        <a href="#">Your Mother</a>.
+                    <p class="copyright-text">Copyright &copy; 2024 All Rights Reserved by
+                        <a href="#">eGFR Calculator</a>.
                     </p>
                 </div>
     
