--- a/js/account/html/patient-register.html
+++ b/js/account/html/patient-register.html
@@ -15,11 +15,17 @@
         </div>
         <div class="form-group">
             <label for="password">Password</label>
-            <input type="password" class="form-control" id="password" placeholder="Password">
+            <div class="password-container">
+                <input type="password" class="form-control" id="password" placeholder="Password">
+                <button type="button" class="show-password-btn" data-target="password">Show</button>
+            </div>
         </div>
         <div class="form-group">
             <label for="confirm-password">Confirm Password</label>
-            <input type="password" class="form-control" id="confirm-password" placeholder="Confirm Password">
+            <div class="password-container">
+                <input type="password" class="form-control" id="confirm-password" placeholder="Confirm Password">
+                <button type="button" class="show-password-btn" data-target="confirm-password">Show</button>
+            </div>
         </div>
         <div class="form-group">
             <label for="dob">Date of Birth</label>
@@ -30,6 +36,11 @@
             <input type="tel" class="form-control" id="phone" placeholder="Enter phone number">
         </div>
         <br>
+        <div class="loading-container" style="display: none;">
+            <div class="loading-bar">
+                <div class="loading-progress"></div>
+            </div>
+        </div>
         <button type="submit" class="button_gl" id="patient-register-submit">Register</button>
         <p class="mt-3 dd_login">Already have an account? <a href="#" id="to-login">Login here</a></p>
     </div>
