--- a/js/account/html/patient.html
+++ b/js/account/html/patient.html
@@ -15,7 +15,10 @@
         <br>
         <div class="ac_input">
             <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required>
+            <div class="password-container">
+                <input type="password" id="password" name="password" required>
+                <button type="button" class="show-password-btn" data-target="password">Show</button>
+            </div>
         </div>
         <br>
         <div>
