Refactor patient registration form to use NHS Number; update version in package files; remove unused server and login scripts; enhance navbar structure

--- a/html/dashboard/home-dashboard.html
+++ b/html/dashboard/home-dashboard.html
@@ -14,33 +14,22 @@
 </head>
 
 <body>
-    <!-- // -->
-    <!-- ? Body ? -->
-    <main class="shell">
-        <!-- ! Menu Open ! -->
-        <div class="mo_4">
-            <i class="fa fa-bars" onclick="openNav()"></i>
-        </div>
-        <!-- // -->
-        <!-- ! Side Bar ! -->
-        <div class="w3-sidebar w3-bar-block sb_012" id="sidebar" style="width:25%; display:none">
-            <button class="w3-button w3-block w3-left-align" onclick="closeNav()">Close</button>
-            <a href="#" class="w3-bar-item w3-button">Link 1</a>
-            <a href="#" class="w3-bar-item w3-button">Link 2</a>
-            <a href="#" class="w3-bar-item w3-button">Link 3</a>
-        </div>
-        <!-- // -->
-        <!-- ! Main Content ! -->
-        <div class="dashboard container">
-            <div class="top-content">
-                <h1><strong>Dashboard Overview</strong></h1>
-                <br>
-                <h5>Welcome back, <span id="userName">???</span></h5>
+    <aside>
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <a class="nav-logo" href="../dashboard/home-dashboard.html" title="Home">
+                    <div class="header-logo"></div>
+                </a>
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="../dashboard/home-dashboard.html">Home</a></li>
+                    <li><a href="eGFR.html">eGFR Calculator</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="logout.html">Logout</a></li>
+                </ul>
             </div>
-        </div>
-        <!-- // -->
-    </main>
-    <!-- // -->
+        </nav>
+    </aside>
 
     <!-- // -->
     <!-- ? Footer ? -->
