--- a/js/account/html/patient-register.html
+++ b/js/account/html/patient-register.html
@@ -7,23 +7,23 @@
         <br>
         <div class="form-group">
             <label for="fullname">Full Name</label>
-            <input type="text" class="form-control" id="fullname" placeholder="Enter your full name">
+            <input type="text" class="form-control" id="fullname" placeholder="Enter your full name" required>
         </div>
         <div class="form-group">
-            <label for="email">Email address</label>
-            <input type="email" class="form-control" id="email" placeholder="Enter email">
+            <label for="NHS-ID">NHS Number</label>
+            <input type="number" class="form-control" id="NHS-ID" placeholder="Enter NHS Number" required>
         </div>
         <div class="form-group">
             <label for="password">Password</label>
             <div class="password-container">
-                <input type="password" class="form-control" id="password" placeholder="Password">
+                <input type="password" class="form-control" id="password" placeholder="Password" required>
                 <button type="button" class="show-password-btn" data-target="password">Show</button>
             </div>
         </div>
         <div class="form-group">
             <label for="confirm-password">Confirm Password</label>
             <div class="password-container">
-                <input type="password" class="form-control" id="confirm-password" placeholder="Confirm Password">
+                <input type="password" class="form-control" id="confirm-password" placeholder="Confirm Password" required>
                 <button type="button" class="show-password-btn" data-target="confirm-password">Show</button>
             </div>
         </div>
@@ -33,7 +33,7 @@
         </div>
         <div class="form-group">
             <label for="phone">Phone Number</label>
-            <input type="tel" class="form-control" id="phone" placeholder="Enter phone number">
+            <input type="tel" class="form-control" id="phone" placeholder="Enter phone number" required>
         </div>
         <div class="form-group">
             <label for="race">Race</label>
