--- a/js/account/html/patient.html
+++ b/js/account/html/patient.html
@@ -9,8 +9,8 @@
     <br>
     <div>
         <div class="ac_input">
-            <label for="email">Email:</label>
-            <input type="text" id="email" name="email" required>
+            <label for="NHS-ID">NHS Number:</label>
+            <input type="number" id="NHS-ID" name="nhs-number" required>
         </div>
         <br>
         <div class="ac_input">
