Add eGFR options page with CSV upload and manual input features; update dashboard link

--- a/html/dashboard/patient-dashboard.html
+++ b/html/dashboard/patient-dashboard.html
@@ -102,7 +102,7 @@
                     <h2>Quick Actions</h2>
                 </div>
                 <div class="card-content">
-                    <a href="eGFR.html" class="action-button">
+                    <a href="egfr-options.html" class="action-button">
                         <i class="fa fa-calculator"></i>
                         Calculate eGFR
                     </a>
