Fix navigation links in eGFR options and patient dashboard to point to the correct pages

--- a/html/dashboard/egfr-options.html
+++ b/html/dashboard/egfr-options.html
@@ -20,11 +20,11 @@
             <div class="container-fluid">
                 <div class="space-out">
                     <div class="flexNav">
-                        <a class="nav-logo" href="../dashboard/home-dashboard.html" title="Home">
+                        <a class="nav-logo" href="../dashboard/patient-dashboard.html.html" title="Home">
                             <div class="header-logo"></div>
                         </a>
                         <ul class="nav navbar-nav">
-                            <li><a href="../dashboard/home-dashboard.html"><i class="fa fa-home"></i> Home</a></li>
+                            <li><a href="../dashboard/patient-dashboard.html.html"><i class="fa fa-home"></i> Home</a></li>
                             <li class="active"><a href="egfr-options.html"><i class="fa fa-calculator"></i> eGFR Calculator</a></li>
                             <li><a href="about.html"><i class="fa fa-info-circle"></i> About</a></li>
                             <li><a href="contact.html"><i class="fa fa-envelope"></i> Contact</a></li>
