Add patient history page with history display and modal details

--- a/html/dashboard/patient-dashboard.html
+++ b/html/dashboard/patient-dashboard.html
@@ -106,7 +106,7 @@
                         <i class="fa fa-calculator"></i>
                         Calculate eGFR
                     </a>
-                    <a href="#" class="action-button">
+                    <a href="history.html" class="action-button">
                         <i class="fa fa-history"></i>
                         View History
                     </a>
