Implement responsive sidebar toggle functionality and styling across dashboard pages

--- a/html/dashboard/history.html
+++ b/html/dashboard/history.html
@@ -17,7 +17,12 @@
 </head>
 
 <body>
-    <aside>
+    <div class="menu-toggle">
+        <button title="menu" onclick="toggleNav()" class="toggle-btn">
+            <i class="fa fa-bars"></i>
+        </button>
+    </div>
+    <aside id="sidebar">
         <nav class="navbar navbar-default">
             <div class="container-fluid">
                 <div class="space-out">
