--- a/html/dashboard/egfr-options.html
+++ b/html/dashboard/egfr-options.html
@@ -13,9 +13,16 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
+
 <body>
-    <aside>
+    <div class="menu-toggle">
+        <button title="menu" onclick="toggleNav()" class="toggle-btn">
+            <i class="fa fa-bars"></i>
+        </button>
+    </div>
+    <aside id="sidebar">
         <nav class="navbar navbar-default">
             <div class="container-fluid">
                 <div class="space-out">
