--- a/html/dashboard/patient-dashboard.html
+++ b/html/dashboard/patient-dashboard.html
@@ -18,7 +18,7 @@
 
 <body>
     <div class="menu-toggle">
-        <button onclick="toggleNav()" class="toggle-btn">
+        <button title="menu" onclick="toggleNav()" class="toggle-btn">
             <i class="fa fa-bars"></i>
         </button>
     </div>
