Refactor patient dashboard to remove email display, enhance history item creation, and improve error handling in data loading

--- a/html/dashboard/patient-dashboard.html
+++ b/html/dashboard/patient-dashboard.html
@@ -67,10 +67,10 @@
                         <span class="label">Date of Birth:</span>
                         <span class="value" id="dob">Loading...</span>
                     </div>
-                    <div class="info-row">
+                    <!-- <div class="info-row">
                         <span class="label">Email:</span>
                         <span class="value" id="email">Loading...</span>
-                    </div>
+                    </div> -->
                     <div class="info-row">
                         <span class="label">Phone:</span>
                         <span class="value" id="phone">Loading...</span>
